--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "type": "pwa-msedge",
             "request": "launch",
             "name": "Open index.html",
-            "file": "c:\\Users\\simon\\Documents\\GitHub\\immender.github.io\\en\\pencil-puzzles\\index.html"
+            "file": "c:\\Users\\simon\\Documents\\GitHub\\immender.github.io\\index.html"
         }
     ]
 }
